fix: pictures page scrollbar

--- a/src/app/(pages)/(static)/picture/style.module.css
+++ b/src/app/(pages)/(static)/picture/style.module.css
@@ -90,6 +90,9 @@
   display: none;
 }
 
+.imageSection:last-child{
+  margin-right: 295px;
+}
 .imageSection {
   width: 295px;
   height: 169px;
@@ -129,10 +132,12 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 0 60px;
+  /* padding: 0 30px; */
+  padding-right: 2rem;
+  padding-left: 2rem;
   background: white;
   color: black;
-  margin-top: 20px; /* temp */
+  margin-top: 1rem; /* temp */
 }
 .PictureScrollBarRightSide {
   display: flex;
@@ -221,6 +226,7 @@
   .PictureSectionHome {
     display: none;
   }
+  
   .PictureGallary {
     position: relative;
     z-index: 0;
@@ -228,6 +234,7 @@
     height: 75svh;
     margin: auto;
     padding: auto;
+    padding-right: 20px;
     transform: translateX(0);
     flex-flow: row wrap;
     align-content: flex-start;
